--- a/patterns/buttons/buttons.css
+++ b/patterns/buttons/buttons.css
@@ -3,38 +3,60 @@ html {
   background-color: #000;
 }
 
-.btn-temp {
+.btn-temp:hover {
+  background-color: none;
+  border: .5px solid transparent;
+  background-color: transparent;
+  margin: none;
+}
+
+.btn-whole {
+  background-color: transparent;
+  border: .5px solid #fff;
+  display: inline-block;
+  border-radius: 25px;
+  overflow: hidden;
+}
+
+.btn-left {
+  border: solid transparent;
+  border-top-left-radius: 25px;
+  border-bottom-left-radius: 25px;
+  float: left;
+  width: 50%;
   color: #000;
   background-color: #fff;
-  border: 1px solid #fff;
+  border: .5px solid #fff;
   margin: none;
   border-radius: 0;
 }
 
-.btn-temp:hover {
-  background-color: none;
-  border: 1px solid #fff;
-}
-
-.btn-left {
-  border-top-left-radius: 25px;
-  border-bottom-left-radius: 25px;
-}
-
 .btn-right {
+  border: solid transparent;
   border-top-right-radius: 25px;
   border-bottom-right-radius: 25px;
+  float: right;
+  width: 50%;
+  color: #000;
+  background-color: #fff;
+  border: .5px solid #fff;
+  margin: none;
+  border-radius: 0;
 }
 
 .btn-large {
-  padding-right: 15em;
-  padding-left: 15em;
+  width: 70%;
+  padding-right: 16em;
+  padding-left: 16em;
   border-radius: 25px;
+  color: #000;
+  background-color: #fff;
+  border: .5px solid #fff;
+  margin: none;
 }
 
-.btn-whole {
-  background-color: #fff;
-  border: 1px solid #fff;
-  display: inline-block;
-  border-radius: 25px;
+.btn-temp-2:hover {
+  background-color: none;
+  border: .5px solid #fff;
+  background-color: transparent;
 }
